fix(side-menu): align padding with figma

--- a/packages/core/src/components/side-menu/side-menu-close-button/side-menu-close-button.scss
+++ b/packages/core/src/components/side-menu/side-menu-close-button/side-menu-close-button.scss
@@ -1,9 +1,11 @@
 :host {
+  margin-left: -2px;
+
   button {
     height: 64px;
     width: 100%;
     text-align: left;
-    padding: 0 24px;
+    padding: 0 22px;
     border: none;
     background-color: var(--tds-sidebar-side-menu-background-cover);
     font: var(--tds-headline-07);
